objects/SVMXC__SM_Default_Checklist_Response__c.object
<CustomObject>
    <fields>
        <fullName>SVMXC__SM_Default_Response__c</fullName>
        <description>Field to hold default response values in JSON form</description>
        <inlineHelpText>Field to hold default response values in JSON form</inlineHelpText>
        <label>Default Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Is_literal_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to identifying Literal is used or not in JSON</description>
        <inlineHelpText>Flag to identifying Literal is used or not in JSON</inlineHelpText>
        <label>Is literal Used ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>SVMXC__Question_Bank__c</referenceTo>
        <relationshipLabel>Default Checklist Responses</relationshipLabel>
        <relationshipName>Default_Checklist_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Default Checklist Response</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Default Checklist Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>